@@ -1656,27 +1656,31 @@ static void xypoints(SEXP call, SEXP args, int *n)
 {
     int k=0;/* -Wall */
 
-    if (!isNumeric(CAR(args)) || (k = LENGTH(CAR(args))) <= 0)
+    if (!isNumeric(CAR(args)))
 	error(_("invalid first argument"));
     SETCAR(args, coerceVector(CAR(args), REALSXP));
+    k = LENGTH(CAR(args));
     *n = k;
     args = CDR(args);
 
-    if (!isNumeric(CAR(args)) || (k = LENGTH(CAR(args))) <= 0)
+    if (!isNumeric(CAR(args)))
 	error(_("invalid second argument"));
+    k = LENGTH(CAR(args));
     SETCAR(args, coerceVector(CAR(args), REALSXP));
     if (k > *n) *n = k;
     args = CDR(args);
 
-    if (!isNumeric(CAR(args)) || (k = LENGTH(CAR(args))) <= 0)
+    if (!isNumeric(CAR(args)))
 	error(_("invalid third argument"));
     SETCAR(args, coerceVector(CAR(args), REALSXP));
+    k = LENGTH(CAR(args));
     if (k > *n) *n = k;
     args = CDR(args);
 
-    if (!isNumeric(CAR(args)) || (k = LENGTH(CAR(args))) <= 0)
+    if (!isNumeric(CAR(args)))
 	error(_("invalid fourth argument"));
     SETCAR(args, coerceVector(CAR(args), REALSXP));
+    k = LENGTH(CAR(args));
     if (k > *n) *n = k;
     args = CDR(args);
 }
@@ -1696,6 +1700,7 @@ SEXP attribute_hidden do_segments(SEXP call, SEXP op, SEXP args, SEXP env)
     GCheckState(dd);
 
     xypoints(call, args, &n);
+    if(n == 0) return R_NilValue;
 
     sx0 = CAR(args); nx0 = length(sx0); args = CDR(args);
     sy0 = CAR(args); ny0 = length(sy0); args = CDR(args);
@@ -1763,6 +1768,8 @@ SEXP attribute_hidden do_rect(SEXP call, SEXP op, SEXP args, SEXP env)
     GCheckState(dd);
 
     xypoints(call, args, &n);
+    if(n == 0) return R_NilValue;
+
     sxl = CAR(args); nxl = length(sxl); args = CDR(args);/* x_left */
     syb = CAR(args); nyb = length(syb); args = CDR(args);/* y_bottom */
     sxr = CAR(args); nxr = length(sxr); args = CDR(args);/* x_right */
@@ -1840,6 +1847,7 @@ SEXP attribute_hidden do_arrows(SEXP call, SEXP op, SEXP args, SEXP env)
     GCheckState(dd);
 
     xypoints(call, args, &n);
+    if(n == 0) return R_NilValue;
 
     sx0 = CAR(args); nx0 = length(sx0); args = CDR(args);
     sy0 = CAR(args); ny0 = length(sy0); args = CDR(args);
